css/rtl-style.css
/* ... */
h1 {
	font-size: 2.5em;
}

h2 {
	font-size: 1.8em;
}

h3 {
	font-size: 1.6em;
}

h4 {
	font-size: 1.4em;
}

h5 {
	font-size: 1.3em;
}

h6 {
	font-size: 1.2em;
}

.entry-content h1,
.entry-content h2,
.entry-content h3,
.entry-content h4,
.entry-content h5,
.entry-content h6,
.entry-summary h1,
.entry-summary h2,
.entry-summary h3,
.entry-summary h4,
.entry-summary h5,
.entry-summary h6 {
	margin-top: 40px;
	margin-bottom: 15px;
}

.entry-content h1,
.entry-summary h1 {
	font-size: 2.1em;
}

.entry-content table,
.entry-summary table {
	border-right: solid 1px #eee;
	border-top: solid 1px #eee;
}

.entry-content table td,
.entry-summary table td {
	border-left: solid 1px #eee;
	border-bottom: solid 1px #eee;
}

.page h1.entry-title {
	margin-top: 20px;
	font-size: 3.5em;
}

.blog article,
.archive article,
.search article {
	padding: 40px 0 40px 0;
	border-bottom: solid 1px #ddd;
}

.blog article.show-full-content-first-post {
	padding-top: 0;
}

.blog.single-column-layout article.show-full-content-first-post {
	padding-top: 40px;
}

.archive .page-header,
.search .page-header {
	margin-bottom: 4em;
	padding-bottom: 1em;
	border: solid 1px;
	border-color: #eee;
	background: #F5F5F5;
	padding-top: 10px;
	padding-left: 20px;
	padding-right: 20px;
	padding-bottom: 10px;
	border-radius: 10px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
}

.archive .page-title,
.search .page-title,
.archive .archive-title {
	font-size: 3.5em;
}

.archive.author .archive-title {
	max-width: 80%;
}

article.first-post {
	margin-top: 0;
	padding-top: 0;
}

.entry-title a {
	color: #333332;
	text-decoration: none;
}

.entry-title a:hover {
	color: #57ad68;
}

.entry-title-meta {
	font-size: 13px;
	color: #b3b3b1;
	font-weight: 100;
	letter-spacing: 1px;
	margin-bottom: 0px;
	margin-top: 0px;
	font-style: normal;
	line-height: 1.4;
}

.entry-title-meta-post-date,
.entry-title-meta-author .author-avatar {
	display: none;
}

.entry-title-meta a {
	color: #b3b3b1;
	text-decoration: none;
}

.entry-title-meta-author {
	display: none;
}

.entry-meta,
.entry-meta a {
	color: #b3b3b1;
	font-size: 13px;
	font-family: sans-serif;
	font-weight: 100;
	font-style: normal;
	text-align: left;
}

.entry-meta a:hover {
	color: #57ad68;
}

.single .entry-meta,
.page .entry-meta {
	border-top: 1px solid #eee;
	margin-bottom: 40px;
	margin-top: 40px;
	padding-top: 40px;
}

.single .edit-link,
.page .edit-link {
	float: left;
}

.site {
	background-color: #ffffff;
	margin: 80px auto;
	padding: 0 40px;
	max-width: 700px;
	margin-bottom: 0;
	margin-top: 100px;
}

.site-header {
	float: right;
	margin-top: 0;
	margin-bottom: 30px;
	width: 160px;
	position: relative;
	margin-right: -220px;
	text-align: left;
}

.site-content,
.site-footer {
	float: left;
	max-width: 700px;
	width: 100%;
}

.widget-area {
	float: right;
	width: 160px; /* Sidebar 1 */
	clear: right;
	margin-right: -220px;
	text-align: left;
	font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
	font-size: 15px;
}

.entry-content,
.entry-summary,
.widget-area .widget,
.comment {
	-webkit-hyphens: auto;
	-moz-hyphens: auto;
	hyphens: auto;
	word-wrap: break-word;
}

.entry-title {
	-webkit-hyphens: none;
	-moz-hyphens: none;
	hyphens: none;
	word-wrap: break-word;
}

.widget_search input[type="text"] {
	/* fixes overflow issue */
	width: 90%;
}

.site-footer {
	clear: both;
	margin-top: 100px;
	margin-bottom: 40px;
	color: #b3b3b1;
}

.site-footer,
.site-footer a {
	font-size: 13px;
	text-align: center;
}

.site-footer a:hover {
	color: #57ad68;
}

.site-info {
	font-family: sans-serif;
	font-weight: 100;
}

img#wpstats {
	display: block;
	margin: 5px auto;
	margin-bottom: 25px;
}

table td {
	padding: 4px;
}

table th {
	padding: 4px;
	border-bottom: solid 1px #ccc;
}

.full-width-featured-image #page {
	margin-top: 20px;
}

.post-cover-overlay-post-title #page {
	margin-top: 40px;
}

/* Post Author Bottom Card */

.post-author-bottom {
	padding-top: 50px;
	padding-bottom: 50px;
	margin-bottom: 40px;
	position: relative;
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
	display: none;
	min-height: 100px;
}

.post-author-bottom .site-logo img {
	float: right;
	height: auto;
}

.post-author-bottom .site-title,
.post-author-bottom .site-description {
	clear: none;
}

.post-author-bottom .post-author-info {
	margin-right: 140px;
	margin-left: 120px;
	padding-right: 25px;
	padding-top: 10px;
}

.post-author-bottom div.site-title,
.post-author-bottom div.site-description {
	margin-right: 0;
}

.post-author-bottom div.site-title {
	font-style: normal;
	font-size: 20px;
	line-height: 1.6;
}

.post-author-bottom .post-published-date {
	width: 120px;
	margin-right: 385px;
	position: absolute;
	margin-top: -85px;
	top: 145px;
	left: 0;
}

/* Footnotes */

.footnotes p,
.blog .show-full-content-first-post .footnotes p,
.blog .show-full-content-first-post-sticky .footnotes p {
	margin-bottom: 0;
}

.footnotes,
.blog .show-full-content-first-post .footnotes,
.blog .show-full-content-first-post-sticky .footnotes {
	font-size: 80%;
}

.blog .format-aside .footnotes,
.blog .format-quote .footnotes,
.archive .format-aside .footnotes,
.archive .format-quote .footnotes,
.search .format-aside .footnotes,
.search .format-quote .footnotes {
	display: none;
}

.blog hr.footnotes,
.archive hr.footnotes,
.search hr.footnotes {
	margin-right: 0;
	width: 50%;
	background-color: #ddd;
}

.format-aside sup,
.format-quote sup,
.format-aside .footnotes,
.format-quote .footnotes{
	font-size: 15px;
	font-style: normal;
}

/* Author Page Styles */

.author-archive-author-avatar img {
	margin-bottom: 10px;
	border-radius: 50%;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	max-width: 70px;
	height: auto;
}

.author .author-description {
	margin-left: 120px;
}

.author div.author-bio {
	border-bottom: 1px solid;
	border-color: #b3b3b1;
	padding-bottom: 40px;
	margin-bottom: 80px;
}

.author .author-avatar img {
	float: left;
	border-radius: 95px;
	margin-top: -85px;
}
/* ... */

